--- a/I4G006743HQF/blog/templates/blog/post_list.html
+++ b/I4G006743HQF/blog/templates/blog/post_list.html
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-            
+
                 {% for post in post_list %}
                 <tr>
                     {% comment %} <th scope="row">{{forloop.counter}}</th> {% endcomment %}
@@ -34,19 +34,20 @@
                     <td class="text-center">{{post.author}}</td>
                     <td class="text-center">{{post.body|truncatewords:30|linebreaks}}</td>
                     <td class="text-center">{{post.status}}</td>
-                    <td class="text-center">{{post.published_at|date:"D, d M, y"}}</td>
+                    <td class="text-center">{{post.published|date:"D, d M, y"}}</td>
+                    <td class="text-center">{{post.created|date:"D, d M, y"}}</td>
                     <td><a href="{% url 'blog:post_update' post.slug %} ">Update</a></td>
                     <td><a href="{% url 'blog:post_delete' post.slug %}">Delete</a></td>
                 </tr>
             {% endfor %}
-        
+
             </tbody>
-        </table>    
+        </table>
         <div class="d-flex justify-content-center">
             <a href="{% url 'blog:post_create' %}" class="d-block btn btn-primary btn-lg my-5">Add New</a>
         </div>
     </div>
-        
+
 </div>
 
 {% endblock content %}
